--- a/pod-helloworld.yml
+++ b/pod-helloworld.yml
@@ -9,4 +9,5 @@ spec:
         - name: k8s-demo
           image: wallyx/node-application
           ports:
-            - containerPort: 3000
+            - name: nodejs-port
+              containerPort: 3000
